--- a/overlay/prod/result/deployment.yaml
+++ b/overlay/prod/result/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: result-deployment
   labels:
-    version: 1.0
+    version: "1.0"
 spec:
   selector:
     matchLabels:
@@ -11,7 +11,7 @@ spec:
   template:
     metadata:
       labels:
-        version: 1.0
+        version: "1.0"
         type: result
     spec:
       containers:
