--- a/manifest/infra/argo-app/external-dns-app.yaml
+++ b/manifest/infra/argo-app/external-dns-app.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd
 spec:
   destination:
-    namespace: vote
+    namespace: kube-system
     server: https://kubernetes.default.svc
   source:
     repoURL: https://github.com/dispiny/msa_voting_infra.git
